NMAAS-697 Errors are now visible in domain form, updating customer networks fixed

--- a/nmaas-portal/src/app/appmarket/domains/domain/domain.component.css
+++ b/nmaas-portal/src/app/appmarket/domains/domain/domain.component.css
@@ -3,3 +3,7 @@
     margin: 0;
     -moz-appearance:textfield;
 }
+
+input.ng-dirty.ng-invalid {
+    border: 1px solid red;
+}
